--- a/cluster_profiling.Rmd
+++ b/cluster_profiling.Rmd
@@ -190,7 +190,7 @@ catdes(dfcl, 24, proba = 0.01)
 
 ## Cluster templates
 
-* Cluster 1 (Male average performances): Heavier younger male that tried lifting more weight than average and failed more in all categories (squat, bench and deadlift), finishing in worse places (lower than 3rd and less 1st than average). Significantly more from Germany and less from England.
-* Cluster 2 (Male top performances): Heavier (but less than cluster 1) male that tried lifting more weight than average (but less than cluster 1) and succeeded more in all categories (squat, bench and deadlift),  finishing in better places (more 1st and less lower than 3rd). Significantly more from Germany and no one from Ukraine.
-* Cluster 3 (Female average performances): Lighter older female that tried lifting less weight and failed more in all categories (squat, bench and deadlift), finishing more disqualified but less in places lower than 3rd. Significantly more from USA and less from Germany.
-* Cluster 4 (Female top performances): Lighter (but heavier than cluster 3) older (more than cluster 3) female that tried lifting less weight (less than cluster 3) and succeeded more in all categories (squat, bench and deadlift), finishing more 1st and less in places lower than 3rd. Significantly more from England and less from Other countries.
+* Cluster 1 (Male ambitious performances): Heavier younger male that tried lifting more weight than average and failed more in all categories (squat, bench and deadlift), finishing in worse places (lower than 3rd and less 1st than average). Significantly more from Germany and less from England.
+* Cluster 2 (Male conservative performances): Heavier (but less than cluster 1) male that tried lifting more weight than average (but less than cluster 1) and succeeded more in all categories (squat, bench and deadlift), finishing in better places (more 1st and less lower than 3rd). Significantly more from Germany and no one from Ukraine.
+* Cluster 3 (Female ambitious performances): Lighter older female that tried lifting less weight and failed more in all categories (squat, bench and deadlift), finishing more disqualified but less in places lower than 3rd. Significantly more from USA and less from Germany.
+* Cluster 4 (Female conservative performances): Lighter (but heavier than cluster 3) older (more than cluster 3) female that tried lifting less weight (less than cluster 3) and succeeded more in all categories (squat, bench and deadlift), finishing more 1st and less in places lower than 3rd. Significantly more from England and less from Other countries.
